--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
 		"test:integration": "playwright test",
 		"test:unit": "vitest"
 	},
+	"dependencies": {
+		"highlight.js": "^11.9.0",
+		"typed.js": "^2.1.0"
+	},
 	"devDependencies": {
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^3.0.0",
@@ -41,9 +45,5 @@
 		"vite": "^5.0.3",
 		"vitest": "^1.2.0"
 	},
-	"type": "module",
-	"dependencies": {
-		"highlight.js": "^11.9.0",
-		"typed.js": "^2.1.0"
-	}
+	"type": "module"
 }
